# studio

./: .cspell.json  .gitignore  .studio-workspace.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  Studio.code-workspace  pyproject.toml  sonar-project.properties  vulture_whitelist.py  whatsnew.toml
.bootstrap/: version.toml  whatsnew.toml
.bootstrap/.core/: README.md
.bootstrap/.gen/: AGENTS.md  README.md  SKILL.md
.bootstrap/config/: AGENTS.md  README.md  SKILL.md  artifacts.toml  core.toml  pr-review.toml
.change-impact/cpt-studio-featstatus-kit-management/: report.md
.claude/agents/: cf-analyze-planner.md  cf-brainstorm-expert.md  cf-brainstorm-facilitator.md  cf-brainstorm-panel.md  cf-code-bug-finder.md  cf-codegen.md  cf-deterministic-validator.md  cf-diff-scope-resolver.md  cf-explorer.md  cf-generate-author-junior.md  cf-generate-author-lead.md  cf-generate-author-middle.md  cf-generate-author-senior.md  cf-generate-author.md  cf-generate-coder-casual.md  cf-generate-coder-smart.md  cf-generate-collector.md  cf-generate-planner.md  cf-generate-prompt-engineer-casual.md  cf-generate-prompt-engineer-smart.md  cf-migrate-migrator.md  cf-migrate-planner.md  cf-migrate-scanner.md  cf-migrate-verifier.md  cf-pdsl-author.md  cf-pdsl-reviewer.md  cf-pdsl-transformer.md  cf-phase-compiler.md  cf-phase-runner.md  cf-pr-review.md  cf-prompt-bug-finder.md  cf-ralphex.md  cf-semantic-reviewer-artifact.md  cf-semantic-reviewer-code.md  cf-semantic-reviewer-consistency.md  cf-semantic-reviewer-prompt.md  storytelling-context-pack.md  storytelling-export.md  storytelling-gate.md  storytelling-preflight.md  (+1 more)
.codex/: .cf-installed
.codex/agents/: cf-analyze-planner.toml  cf-brainstorm-expert.toml  cf-brainstorm-facilitator.toml  cf-brainstorm-panel.toml  cf-code-bug-finder.toml  cf-codegen.toml  cf-deterministic-validator.toml  cf-diff-scope-resolver.toml  cf-explorer.toml  cf-generate-author-junior.toml  cf-generate-author-lead.toml  cf-generate-author-middle.toml  cf-generate-author-senior.toml  cf-generate-author.toml  cf-generate-coder-casual.toml  cf-generate-coder-smart.toml  cf-generate-collector.toml  cf-generate-planner.toml  cf-generate-prompt-engineer-casual.toml  cf-generate-prompt-engineer-smart.toml  cf-migrate-migrator.toml  cf-migrate-planner.toml  cf-migrate-scanner.toml  cf-migrate-verifier.toml  cf-pdsl-author.toml  cf-pdsl-reviewer.toml  cf-pdsl-transformer.toml  cf-phase-compiler.toml  cf-phase-runner.toml  cf-pr-review.toml  cf-prompt-bug-finder.toml  cf-ralphex.toml  cf-semantic-reviewer-artifact.toml  cf-semantic-reviewer-code.toml  cf-semantic-reviewer-consistency.toml  cf-semantic-reviewer-prompt.toml  storytelling-context-pack.toml  storytelling-export.toml  storytelling-gate.toml  storytelling-preflight.toml  (+1 more)
.cursor/agents/: cf-analyze-planner.md  cf-brainstorm-expert.md  cf-brainstorm-facilitator.md  cf-brainstorm-panel.md  cf-code-bug-finder.md  cf-codegen.md  cf-deterministic-validator.md  cf-diff-scope-resolver.md  cf-explorer.md  cf-generate-author-junior.md  cf-generate-author-lead.md  (+30 more)
.github/: .cf-installed
architecture/: COMPETITIVE-ANALYSIS.md  DECOMPOSITION.md  DESIGN.md  PRD.md
guides/: AGENT-TOOLS.md  CONFIGURATION.md  MIGRATING-FROM-CYPILOT.md  PROJECT-EXTENSIBILITY.md  STORY.md  USAGE-GUIDE.md
requirements/: agent-compliance.md  auto-config.md  brief-template.md  bug-finding.md  code-checklist.md  consistency-checklist.md  execution-protocol.md  language-complexity.md  map-config-assist.md  map.md  pdsl-execution-card.md  pdsl-patterns.md  plan-checklist.md  plan-decomposition.md  plan-template.md  prompt-bug-finding.md  prompt-engineering.md  raw-input-overflow.md  reverse-engineering.md  storytelling-dimensions.md  storytelling-export.md  storytelling-modes.md  storytelling-phases.md  storytelling-preferences.md  storytelling-shared.md  storytelling.md  workspace-setup.md  workspace.md
schemas/: artifacts.schema.json  core-config.schema.json  kit-constraints.schema.json  kit-manifest.schema.json  map.schema.json  workspace.schema.json
scripts/: check_coverage.py  check_versions.py  score_comparison_matrix.py  seed_local_cache.py
tests/: _test_helpers.py  conftest.py  e2e-analysis-report.md  pylint_plugin_fakes.py  test_adapter_info.py  test_agents_coverage.py  test_agents_existing_snapshot.py  test_agents_extra_coverage.py  test_agents_model_matrix.py  test_ai_navigate_when.py  test_artifacts_meta.py  test_check_language.py  test_chunk_input.py  test_cli_agents_e2e.py  test_cli_artifact_tools_e2e.py  test_cli_contracts_e2e.py  test_cli_example_kits_e2e.py  test_cli_fs_invariants_e2e.py  test_cli_gitignore_e2e.py  test_cli_helpers.py  test_cli_human_mode_e2e.py  test_cli_integration.py  test_cli_kit_utility_e2e.py  test_cli_map_public_e2e.py  test_cli_navigation_e2e.py  test_cli_py_coverage.py  test_cli_router_e2e.py  test_cli_setup_e2e.py  test_cli_update_e2e.py  test_cli_validate_e2e.py  test_cli_validation_e2e.py  test_cli_workspace_diag_e2e.py  test_cmd_generate_agents_v2.py  test_codebase.py  test_constraints_utils.py  test_content_language.py  test_context.py  test_core_structure.py  test_core_upgrade_e2e.py  test_coverage_gaps.py  (+82 more)
workflows/: analyze.md  auto-config.md  brainstorm.md  brave-new-world.md  code-planning.md  coding-ci.md  coding-fix.md  coding-gen.md  coding-review.md  coding-tests.md  coding.md  debug-prompts.md  debug-skill.md  docs-ci.md  docs-planning.md  docs-review.md  documenting-ci.md  documenting-fix.md  documenting-gen.md  documenting-planning.md  documenting-review.md  explain.md  explore.md  generate.md  git-commit.md  help.md  kit-ci.md  kit-fix.md  kit-gen.md  kit-init.md  kit-planning.md  kit-review.md  kit.md  map.md  pdsl.md  plan.md  planning.md  prompting-ci.md  prompting-fix.md  prompting-gen.md  (+10 more)
workflows-old/: brainstorm.md  explain.md  generate.md  help.md  map.md  plan.md  workspace.md  write-skill.md
(+943 files in other folders)
