[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "constructor-studio"
dynamic = ["version"]
description = "Constructor Studio global CLI proxy — deterministic agent tool for structured workflows"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11.4"
# @cpt-dod:cpt-studio-dod-core-infra-global-package:p1 — zero third-party dependencies
dependencies = []

[project.scripts]
# @cpt-dod:cpt-studio-dod-core-infra-global-package:p1 — console entry points
cfs = "studio_proxy.cli:main"
constructor-studio = "studio_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pylint.main]
jobs = 0
persistent = false
py-version = "3.11"
ignore-paths = [
    "^\\.bootstrap/",
    "^examples/",
    "^tests/",
]
ignore-patterns = [
    "^rectpack\\.py$",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 8
max-positional-arguments = 8

[tool.pylint.reports]
score = false

[tool.pylint."messages control"]
disable = [
    "all",
]
enable = [
    "E0602",
    "E0102",
    "E1120",
    "E1121",
    "E1123",
    "E1124",
    "E1125",
    "E1126",
    "E1130",
    "E1131",
    "E1133",
    "E1135",
    "E1136",
    "W0102",
    "W0106",
    "W0107",
    "W0120",
    "W0123",
    "W0125",
    "W0133",
    "W0150",
    "W0201",
    "W0231",
    "W0237",
    "W0718",
    "W1510",
    "W1514",
    "W1309",
    "W0640",
    "W0707",
    "W0404",
    "W0212",
    "W0603",
    "W0612",
    "W0613",
    "W0611",
]
