[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "constructor-studio"
dynamic = ["version"]
description = "Constructor Studio global CLI proxy — deterministic agent tool for structured workflows"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11.4"
# @cpt-dod:cpt-studio-dod-core-infra-global-package:p1 — zero third-party dependencies
dependencies = []

[project.scripts]
# @cpt-dod:cpt-studio-dod-core-infra-global-package:p1 — console entry points
cfs = "studio_proxy.cli:main"
constructor-studio = "studio_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pylint.main]
jobs = 0
persistent = false
py-version = "3.11"
init-hook = "import sys; sys.path[:0] = ['src', 'skills/studio/scripts', 'scripts']"
load-plugins = [
    "pylint_plugins.cpt_marker_columns",
    "pylint_plugins.error_surfaces",
    "pylint_plugins.import_boundaries",
    "pylint_plugins.output_channels",
    "pylint_plugins.silent_exceptions",
]
ignore-paths = [
    "^\\.bootstrap/",
    "^examples/",
    "^tests/",
]
ignore-patterns = [
    "^rectpack\\.py$",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 8
max-positional-arguments = 8

[tool.pylint.reports]
score = false

[tool.pylint."messages control"]
disable = [
    "all",
]
enable = [
    "C0301",
    "C0303",
    "C0305",
    "C0325",
    "C0103",
    "C0114",
    "C0115",
    "C0116",
    "C0411",
    "C0413",
    "C0414",
    "C1804",
    "C1805",
    "E",
    "F",
    "R0801",
    "R0903",
    "R0911",
    "R0912",
    "R0913",
    "R0914",
    "R0915",
    "R0916",
    "R1702",
    "R1705",
    "R1716",
    "R1721",
    "R1724",
    "R1732",
    "W0101",
    "W0102",
    "W0104",
    "W0105",
    "W0106",
    "W0107",
    "W0108",
    "W0109",
    "W0120",
    "W0122",
    "W0123",
    "W0124",
    "W0125",
    "W0126",
    "W0127",
    "W0128",
    "W0129",
    "W0130",
    "W0131",
    "W0133",
    "W0134",
    "W0135",
    "W0136",
    "W0137",
    "W0143",
    "W0150",
    "W0177",
    "W0199",
    "W0201",
    "W0211",
    "W0212",
    "W0213",
    "W0221",
    "W0222",
    "W0223",
    "W0231",
    "W0233",
    "W0236",
    "W0237",
    "W0238",
    "W0239",
    "W0240",
    "W0244",
    "W0245",
    "W0246",
    "W0401",
    "W0404",
    "W0406",
    "W0407",
    "W0410",
    "W0416",
    "W0511",
    "W0603",
    "W0613",
    "W0614",
    "W0611",
    "W0612",
    "W0621",
    "W0622",
    "W0631",
    "W0632",
    "W0640",
    "W0641",
    "W0642",
    "W0644",
    "W0702",
    "W0705",
    "W0706",
    "W0707",
    "W0711",
    "W0715",
    "W0716",
    "W0718",
    "W0719",
    "W1113",
    "W1114",
    "W1115",
    "W1116",
    "W1117",
    "W1201",
    "W1202",
    "W1203",
    "W1300",
    "W1301",
    "W1302",
    "W1303",
    "W1304",
    "W1305",
    "W1306",
    "W1307",
    "W1308",
    "W1309",
    "W1310",
    "W1401",
    "W1402",
    "W1404",
    "W1405",
    "W1406",
    "W1501",
    "W1502",
    "W1503",
    "W1506",
    "W1507",
    "W1508",
    "W1509",
    "W1510",
    "W1514",
    "W1515",
    "W1518",
    "W2101",
    "W2301",
    "W2402",
    "W2601",
    "W2602",
    "W2603",
    "W2604",
    "W2605",
    "W2606",
    "W3101",
    "W3301",
    "W3601",
    "W4701",
    "W4901",
    "W4902",
    "W4903",
    "W4904",
    "W4905",
    "W4906",
    "W9001",
    "W9002",
    "W9003",
    "W9004",
    "W9005",
    "W9006",
    "W9007",
]

# Pylint rollout backlog, ordered by priority: useful/simple first,
# noisy/architectural last. Active tranche: 01-06. Keep remaining backlog
# deferred/commented until the rule is clean and enabled.
# 07. R0917 - too many positional arguments (5 findings, API churn risk)
# 08. R0902 - too many instance attributes (18 findings, data model risk)
# 09. C0302 - too many lines in module (13 findings, module split risk)
# 10. C0415 - import outside top-level (240 findings, lazy import risk)
# 11. R0401 - cyclic imports (16 findings, architecture risk)
